# tellodb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  test_coreml.rs  test_cte.sql  test_cte_explain.sql  test_fts.sql  test_profile.rs  test_rowid.sql  test_sqlite.py
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
benches/: benchmarks.rs
benchmarks/: .env.benchmarks.example  README.md  endpoint_bench.sh  run_locomo_gpt5mini.sh  run_longmemeval_gpt5mini.sh  run_model_smoke.sh
benchmarks/LoCoMo/: README.md
benchmarks/results/: locomo_20260328T191247Z.jsonl  locomo_20260328T192353Z.jsonl  locomo_20260328T194018Z.jsonl  locomo_20260328T194913Z.jsonl  locomo_20260328T200922Z.jsonl  locomo_20260328T202314Z.jsonl
benchmarks/rust_evaluator/: .gitignore  Cargo.toml  outputs.jsonl
benchmarks/rust_evaluator/src/: main.rs
deploy/terraform/: cloud-config.yaml  main.tf
fuzz/: Cargo.toml
fuzz/targets/: ingest_utils.rs  query_planner.rs
scripts/: linux_ubuntu  runpod_entrypoint.sh  setup_bench_data.sh
src/: analytics.rs  error.rs  fts.rs  graph.rs  graph_inference.rs  lifecycle.rs  main.rs  metrics.rs  ml.rs  platform.rs  runtime_paths.rs  semantic.rs  vector_index.rs
src/api/: auth.rs  ingest_utils.rs  mod.rs  planner.rs  types.rs  utils.rs
src/api/handlers/: ingest.rs  mcp.rs  mod.rs  platform.rs  query.rs  system.rs
src/api/ingest/: alias.rs  chunking.rs  companion.rs  datetime.rs  dialogue.rs  fact.rs  mod.rs  salient.rs
src/api/plan/: builder.rs  expansions.rs  intent.rs  mod.rs  rewrite.rs  scoring.rs  types.rs
src/retrieval/: mod.rs  scoring.rs
src/storage/: entity_resolver.rs  manager.rs  mod.rs  tables.rs  tenant.rs  types.rs
