[package]
name = "tellodb"
version = "0.1.0"
edition = "2021"
description = "Temporal memory database engine for AI agents"
rust-version = "1.80"

[features]
default = []
gpu-tensorrt = ["ort/tensorrt"]

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = "0.8.8"
fastembed = "5.13.4"
ort = { version = "2.0.0-rc.12", features = ["cuda"] }
parking_lot = "0.12.3"
prometheus = "0.13"
rand = "0.9.2"
rayon = "1.10.0"
rusqlite = { version = "0.33", features = ["bundled", "functions"] }
r2d2 = "0.8"
r2d2_sqlite = "0.26"
regex = "1.10.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.12"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.42"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
usearch = "2.24.0"
mimalloc = { version = "0.1.47", default-features = false }
tower-http = { version = "0.6.6", features = ["cors", "limit"] }
sysinfo = "0.31"

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["coreml"] }



[dev-dependencies]
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
proptest = "1.6.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = true
